# AlCalc-Backend

./: .env  .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  diesel.toml
migrations/2022-01-07-020438_entries/: up.sql
migrations/2022-01-27-210001_users/: up.sql
migrations/2022-02-27-212203_verified_nullable/: down.sql  up.sql
migrations/2022-03-03-082414_add_user/: up.sql
migrations/2022-03-06-223310_-entry-userid/: down.sql  up.sql
migrations/2022-03-06-224932_user-entry-relation/: down.sql  up.sql
migrations/2022-03-13-113907_user_role/: down.sql  up.sql
migrations/2022-03-17-075013_add-post/: up.sql
migrations/2022-03-19-161532_likes/: up.sql
migrations/2022-03-20-133055_like_rjklsd/: down.sql  up.sql
migrations/2022-03-21-192112_entry_label/: down.sql  up.sql
migrations/2022-03-23-202113_photo/: down.sql  up.sql
migrations/2022-03-23-213615_user-photo/: down.sql  up.sql
migrations/2022-05-16-215717_session/: down.sql  up.sql
migrations/2022-05-22-195642_follows/: down.sql  up.sql
migrations/2022-05-30-102917_post-timestamp/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  sql_types.rs
src/api/: entry.rs  mod.rs
src/db/: entry.rs  follow.rs  image.rs  like.rs  mod.rs  post.rs  session.rs  user.rs
src/model/: entry.rs  follow.rs  image.rs  like.rs  mod.rs  post.rs  session.rs  token.rs  user.rs
src/services/: email.rs  entry.rs  follow.rs  image.rs  jwt_token.rs  like.rs  mailer.rs  mod.rs  post.rs  session.rs  template.rs  token.rs  user.rs
src/templates/: close_this.html
src/types/: mod.rs  stats.rs  token.rs
(+21 files in other folders)
