[package]
name = "alcalc_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
rocket = "0.4.10-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_derive ="0.1.7"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07"]}
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
chrono = "0.4"
rocket_cors = "0.5.0"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]
